--- a/jander.es/src/app/navbar/navbar.component.scss
+++ b/jander.es/src/app/navbar/navbar.component.scss
@@ -6,8 +6,7 @@ $navbarListTextOverColor: darken(#fff, 10%);
 
 .navbar {
 
-    
-    
+    max-width: 100vw;    
     margin-bottom: 0px;
     border-radius: 0px;
     border-bottom: 1px solid $navbarTextColor;
